# focuspulse-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  PLAN.md  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial.py
app/: config.py  database.py  dependencies.py  main.py
app/api/: data.py  pairing.py  sync.py
app/models/: __init__.py  android_usage.py  daily_summary.py  device.py  pairing_code.py  pomodoro.py  session.py  window_event.py
app/schemas/: data.py  pairing.py  sync.py
app/services/: aggregation.py  cleanup.py  pairing.py
tests/: conftest.py  test_auth.py  test_pairing.py  test_sync_schema.py
